feat: enhance landing page with new animations and favicon
✔️ Adds a favicon to the project
✔️ Implements new animation classes for elements
✔️ Updates CSS styles for improved layout and responsiveness
✔️ Removes unused animations CSS file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
       rel="stylesheet"
       href="/src/css/style.css"
     />
+    <link
+      rel="shortcut icon"
+      href="/src/assets/img/favicon.svg"
+      type="image/x-icon"
+    />
     <title>Pet Shop LP Sales [Demo]</title>
-    <meta name="description" content="Landing page de vendas para pet shop" />
+    <meta
+      name="description"
+      content="Landing page de vendas para pet shop"
+    />
   </head>
   <body>
     <progress class="progress"></progress>
@@ -42,7 +50,8 @@
             </li>
           </ul>
           <a
-            id="meuElemento"
+            data-animate="slideInBl"
+            id="btnMoreServices"
             href="#plans"
             class="button text-small"
             >conhecer mais serviços</a
@@ -77,7 +86,10 @@
             e assisti-lo com seu player de vídeo favorito!
           </video>
         </div>
-        <div class="video-text">
+        <div
+          class="video-text"
+          data-animate="slideInRight"
+        >
           <h2 class="title">Proporcione uma rotina de lazer para seu Pet</h2>
           <p class="text">
             Cada vez mais popular, o serviço de dog walker (ou passeador de
@@ -101,10 +113,15 @@
             alt="ceo pet dev"
             class="team-ceo"
           />
-          <div class="team-tag">Brooklyn Simmons, CEO</div>
+          <div
+            class="team-tag"
+            data-animate="slideInRight"
+          >
+            Brooklyn Simmons, CEO
+          </div>
         </div>
         <div class="team-members">
-          <div>
+          <div data-animate="slideInBottom">
             <div>
               <img
                 data-professional="professional"
@@ -119,7 +136,7 @@
               meals. Let's chat!
             </p>
           </div>
-          <div>
+          <div data-animate="slideInBottom">
             <div>
               <img
                 src="/src/assets/img/item2.png"
@@ -134,7 +151,7 @@
               dive into.
             </p>
           </div>
-          <div>
+          <div data-animate="slideInBottom">
             <div>
               <img
                 src="/src/assets/img/item3.png"
@@ -156,7 +173,10 @@
           O que dizem os clientes que já usaram nossos serviços
         </h2>
         <div class="testimonials-items">
-          <div class="item">
+          <div
+            class="item"
+            data-animate="fadeInLeft"
+          >
             <div class="item-balloon">
               <p class="text-medium-normal">
                 Hello Volunteer X, thank you for helping me with grocery
@@ -172,7 +192,10 @@
               <p>Arlene McCoy</p>
             </div>
           </div>
-          <div class="item">
+          <div
+            class="item"
+            data-animate="fadeInRight"
+          >
             <div class="item-balloon">
               <p class="text-medium-normal">
                 Hello Volunteer X, thank you for helping me with grocery
@@ -188,7 +211,10 @@
               <p>Wade Warren</p>
             </div>
           </div>
-          <div class="item">
+          <div
+            class="item"
+            data-animate="fadeInLeft"
+          >
             <div class="item-balloon">
               <p class="text-medium-normal">
                 Hello Volunteer X, thank you for helping me with grocery
@@ -204,7 +230,10 @@
               <p>Marvin McKinney</p>
             </div>
           </div>
-          <div class="item">
+          <div
+            class="item"
+            data-animate="fadeInRight"
+          >
             <div class="item-balloon">
               <p class="text-medium-normal">
                 Hello Volunteer X, thank you for helping me with grocery
@@ -228,7 +257,10 @@
       >
         <h2 class="title">Conheça nossos planos mensais</h2>
         <div class="plans-items">
-          <div class="plan-item">
+          <div
+            class="plan-item"
+            data-animate="slitInVertical"
+          >
             <h3 class="text-medium">Pet Shop Basic</h3>
             <img
               src="/src/assets/img/rectangle-1.png"
@@ -245,7 +277,10 @@
               >obter plano</a
             >
           </div>
-          <div class="plan-item">
+          <div
+            class="plan-item"
+            data-animate="slitInVertical"
+          >
             <h3 class="text-medium">Pet Shop Plus</h3>
             <img
               src="/src/assets/img/rectangle-2.png"
@@ -263,7 +298,10 @@
               >obter plano</a
             >
           </div>
-          <div class="plan-item">
+          <div
+            class="plan-item"
+            data-animate="slitInVertical"
+          >
             <h3 class="text-medium">Pet Shop Premium</h3>
             <img
               src="/src/assets/img/rectangle-3.png"
@@ -293,13 +331,19 @@
       <div class="footer-contact">
         <h3 class="text-medium">Contate-nos</h3>
         <div class="footer-social">
-          <a href="#">
+          <a
+            href="#"
+            data-animate="pulsate"
+          >
             <img
               src="/src/assets/img/instagram.svg"
               alt="instagram"
             />
           </a>
-          <a href="#">
+          <a
+            href="#"
+            data-animate="pulsate"
+          >
             <img
               src="/src/assets/img/facebook.svg"
               alt="facebook"
