feat: Update landing page content and styles for pet shop demo
- Changed language attribute in index.html from English to Brazilian Portuguese.
- Updated team member details in index.html to reflect new veterinarians and their descriptions.
- Revised customer testimonials in index.html to provide more relevant feedback.
- Enhanced service plan descriptions in index.html with specific benefits and WhatsApp links for contact.
- Adjusted CSS styles in style.css to improve layout and responsiveness, including height adjustments for plan items.

--- a/src/origin/index.html
+++ b/src/origin/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -118,7 +118,7 @@
             felizes.
           </p>
           <a
-            href="#"
+            href="#plans"
             class="button text-small"
             >obter dog walker</a
           >
@@ -139,7 +139,7 @@
             class="team-tag"
             data-animate="slideInRight"
           >
-            Brooklyn Simmons, CEO
+            Eduardo Teixeira, CEO
           </div>
         </div>
         <div class="team-members">
@@ -154,11 +154,13 @@
                 loading="lazy"
               />
             </div>
-            <h3 class="text-medium">Devon Lane</h3>
+            <h3 class="text-medium">Dr. Marco Antonio Pereira</h3>
             <p class="text-medium-normal">
-              Hey User I, I'd be happy to help you with meal preparation. I
-              enjoy cooking and can provide you with healthy and delicious
-              meals. Let's chat!
+              Com mão firme e coração acolhedor, o Dr. Marco Antonio é
+              especialista em cirurgias de pequeno porte e emergenciais. Ele
+              acredita que cada procedimento deve ser feito com precisão e
+              carinho, garantindo a recuperação segura e tranquila dos
+              bichinhos.
             </p>
           </div>
           <div data-animate="slideInBottom">
@@ -172,11 +174,12 @@
                 loading="lazy"
               />
             </div>
-            <h3 class="text-medium">Cody Fisher</h3>
+            <h3 class="text-medium">Dra. Mariana Silva</h3>
             <p class="text-medium-normal">
-              Hello User K, I came across your request for someone to read books
-              with. I love reading too! Let's connect and find a good book to
-              dive into.
+              Apaixonada por pets desde a infância, a Dra. Mariana tem mais de
+              10 anos de experiência em cuidados clínicos e acompanhamento
+              preventivo. Seu foco é proporcionar saúde e qualidade de vida para
+              cães e gatos em todas as fases da vida.
             </p>
           </div>
           <div data-animate="slideInBottom">
@@ -190,11 +193,12 @@
                 loading="lazy"
               />
             </div>
-            <h3 class="text-medium">Marvin McKinney</h3>
+            <h3 class="text-medium">Dra. Ana Paula Mendes</h3>
             <p class="text-medium-normal">
-              Hi User E, I read your request for help with technology. I'm
-              proficient in smartphones and computers and would love to assist
-              you. Let's schedule a session!
+              Dra. Ana Paula dedica-se à nutrição de pets, desenvolvendo planos
+              alimentares personalizados para cães e gatos. Sua missão é ajudar
+              os tutores a oferecer a melhor dieta possível, prevenindo doenças
+              e promovendo energia e vitalidade.
             </p>
           </div>
         </div>
@@ -210,9 +214,7 @@
           >
             <div class="item-balloon">
               <p class="text-medium-normal">
-                Hello Volunteer X, thank you for helping me with grocery
-                shopping last week. Your assistance made a big difference. Can
-                we plan another shopping trip?
+                “Encontrei aqui um atendimento incrível! A Mel sempre fica tranquila nas consultas e eu saio confiante de que ela está recebendo o melhor cuidado.”
               </p>
             </div>
             <div class="item-client">
@@ -223,7 +225,7 @@
                 height="70"
                 loading="lazy"
               />
-              <p>Arlene McCoy</p>
+              <p>Carla M. – Tutora da Mel (Golden Retriever)</p>
             </div>
           </div>
           <div
@@ -232,9 +234,7 @@
           >
             <div class="item-balloon">
               <p class="text-medium-normal">
-                Hello Volunteer X, thank you for helping me with grocery
-                shopping last week. Your assistance made a big difference. Can
-                we plan another shopping trip?
+                “Além de profissionais competentes, o carinho com que tratam os animais faz toda a diferença. O Thor adora vir para as consultas!”
               </p>
             </div>
             <div class="item-client">
@@ -245,7 +245,7 @@
                 height="70"
                 loading="lazy"
               />
-              <p>Wade Warren</p>
+              <p>João P. – Tutor do Thor (Bulldog Francês)</p>
             </div>
           </div>
           <div
@@ -254,9 +254,7 @@
           >
             <div class="item-balloon">
               <p class="text-medium-normal">
-                Hello Volunteer X, thank you for helping me with grocery
-                shopping last week. Your assistance made a big difference. Can
-                we plan another shopping trip?
+                “Meu medo era que a Lili ficasse estressada no veterinário, mas a equipe tem uma paciência enorme. Agora sei que ela está em boas mãos.”
               </p>
             </div>
             <div class="item-client">
@@ -267,7 +265,7 @@
                 height="70"
                 loading="lazy"
               />
-              <p>Marvin McKinney</p>
+              <p>Heitor A. – Tutor da Lili (Gatinha SRD)</p>
             </div>
           </div>
           <div
@@ -276,9 +274,7 @@
           >
             <div class="item-balloon">
               <p class="text-medium-normal">
-                Hello Volunteer X, thank you for helping me with grocery
-                shopping last week. Your assistance made a big difference. Can
-                we plan another shopping trip?
+                “Adorei o acompanhamento personalizado! O Dr. Rafael explicou tudo com clareza e cuidou do Max como se fosse dele. Recomendo de olhos fechados.”
               </p>
             </div>
             <div class="item-client">
@@ -289,7 +285,7 @@
                 height="70"
                 loading="lazy"
               />
-              <p>Jerome Bell</p>
+              <p>Ricardo S. – Tutor do Max (Shih Tzu)</p>
             </div>
           </div>
         </div>
@@ -313,13 +309,16 @@
               loading="lazy"
             />
             <ul>
-              <li class="item-list text">Benefício 1</li>
-              <li class="item-list text">Benefício 2</li>
+              <li class="item-list text">Consultas de rotina semestrais</li>
+              <li class="item-list text">Check-up básico de saúde</li>
+              <li class="item-list text">Vacinação anual com pacote essencial</li>
+              <li class="item-list text">Desconto em banho & tosa (1x por mês)</li>
             </ul>
             <h4 class="text-big">R$ 99,90</h4>
             <a
-              href="#"
+              href="https://www.whatsapp.com/5519999999999"
               class="button text-small"
+              target="_blank"
               >obter plano</a
             >
           </div>
@@ -336,14 +335,17 @@
               loading="lazy"
             />
             <ul>
-              <li class="item-list text">Benefício 1</li>
-              <li class="item-list text">Benefício 2</li>
-              <li class="item-list text">Benefício 3</li>
+              <li class="item-list text">Consultas de rotina trimestrais</li>
+              <li class="item-list text">Check-up completo com exames laboratoriais básicos</li>
+              <li class="item-list text">Vacinação anual completa</li>
+              <li class="item-list text">Banho & tosa inclusos 1x por mês</li>
+              <li class="item-list text">Atendimento prioritário em emergências</li>
             </ul>
             <h4 class="text-big">R$ 119,90</h4>
             <a
-              href="#"
+              href="https://www.whatsapp.com/5519999999999"
               class="button text-small"
+              target="_blank"
               >obter plano</a
             >
           </div>
@@ -360,14 +362,18 @@
               loading="lazy"
             />
             <ul>
-              <li class="item-list text">Benefício 1</li>
-              <li class="item-list text">Benefício 2 + plus</li>
-              <li class="item-list text">Benefício 3 + plus</li>
+              <li class="item-list text">Consultas de rotina ilimitadas</li>
+              <li class="item-list text">Check-up completo com exames avançados</li>
+              <li class="item-list text">Vacinação anual completa + antiparasitários</li>
+              <li class="item-list text">Banho & tosa inclusos 2x por mês</li>
+              <li class="item-list text">Teleatendimento veterinário 24h</li>
+              <li class="item-list text">Descontos exclusivos em produtos da loja</li>
             </ul>
             <h4 class="text-big">R$ 199,90</h4>
             <a
-              href="#"
+              href="https://www.whatsapp.com/5519999999999"
               class="button text-small"
+              target="_blank"
               >obter plano</a
             >
           </div>
@@ -387,8 +393,9 @@
         <h3 class="text-medium">Contate-nos</h3>
         <div class="footer-social">
           <a
-            href="#"
+            href="https://www.instagram.com"
             data-animate="pulsate"
+            target="_blank"
           >
             <img
               src="/src/assets/img/instagram.svg"
@@ -399,8 +406,9 @@
             />
           </a>
           <a
-            href="#"
+            href="https://www.facebook.com"
             data-animate="pulsate"
+            target="_blank"
           >
             <img
               src="/src/assets/img/facebook.svg"
